Fixed : Each chart has too much padding. Should be no padding

--- a/src/charts/charts.css
+++ b/src/charts/charts.css
@@ -1,24 +1,11 @@
 .chart-dialog {
     min-width: 350px;
     min-height: 400px;
+    background-color: white !important;
 }
 
-.chartOptions {
-    position: absolute;
-    z-index: 1002;
-    float: left;
-}
-
-.chartOptions > img {
+.chartSubContainer {
     position: relative;
-    float: left;
-}
-
-.chartOptions > ul {
-    display: none;
-}
-
-.chartOptions li {
-    text-align: left;
-    white-space: nowrap;
+    top: 3px;
+    left: 3px;
 }
